# internal/ai/vision/api_response.go
@@ -1,0 +1,53 @@
+package vision
+
+import (
+	"github.com/photoprism/photoprism/internal/ai/classify"
+)
+
+// ApiResponse represents a Vision API service response.
+type ApiResponse struct {
+	Id     string     `yaml:"Id,omitempty" json:"id,omitempty"`
+	Model  *Model     `yaml:"Model,omitempty" json:"model"`
+	Result *ApiResult `yaml:"Result,omitempty" json:"result"`
+}
+
+// ApiResult represents the model response(s) to a Vision API service
+// request and can optionally include data from multiple models.
+type ApiResult struct {
+	Caption *CaptionResult `yaml:"Caption,omitempty" json:"caption,omitempty"`
+	Faces   *[]string      `yaml:"Faces,omitempty" json:"faces,omitempty"`
+	Labels  []LabelResult  `yaml:"Labels,omitempty" json:"labels,omitempty"`
+}
+
+// CaptionResult represents the result generated by a caption generation model.
+type CaptionResult struct {
+	Text       string  `yaml:"Text,omitempty" json:"text,omitempty"`
+	Confidence float32 `yaml:"Confidence,omitempty" json:"confidence,omitempty"`
+}
+
+// LabelResult represents a label generated by an image classification model.
+type LabelResult struct {
+	Name       string  `yaml:"Name,omitempty" json:"name"`
+	Category   string  `yaml:"Category,omitempty" json:"category,omitempty"`
+	Confidence float32 `yaml:"Confidence,omitempty" json:"confidence,omitempty"`
+	Topicality float32 `yaml:"Topicality,omitempty" json:"topicality,omitempty"`
+}
+
+// NewLabelsResponse generates a new Vision API image classification service response.
+func NewLabelsResponse(id string, model *Model, results classify.Labels) ApiResponse {
+	if model == nil {
+		model = NasnetModel
+	}
+
+	var labels = make([]LabelResult, 0, len(results))
+
+	for _, label := range results {
+		labels = append(labels, LabelResult{Name: label.Name, Confidence: label.Confidence()})
+	}
+
+	return ApiResponse{
+		Id:     id,
+		Model:  model,
+		Result: &ApiResult{Labels: labels},
+	}
+}
